--- a/nexus-3.0/package.json
+++ b/nexus-3.0/package.json
@@ -13,6 +13,8 @@
     "font-awesome": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
+    "react-modal": "^3.16.3",
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
