--- a/nexus-3.0/package.json
+++ b/nexus-3.0/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
